k8s/redis-sc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  volume: 
    - name: redis-data
      persistentVolumeClaim:
        claimName: redis-pvc
