k8s/scanner-api-sc.yml
apiVersion: v1
kind: Service
metadata:
  name: scanner-api-service
spec:
  selector:
    app: scanner-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
