k8s/scanner-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scanner-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: scanner-api.maxian.sk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: scanner-api-service
            port:
              number: 8000
